VIVO-1023 expanded Agrovoc results and replaced XML parsing with RDF model parsing for both LCSH and Agrovoc